Rewrote the example. Also added a not around best effort stdout capture for ConsoleCapture